--- a/-/c/critical.css
+++ b/-/c/critical.css
@@ -4,11 +4,19 @@ body::after{ content: mini; display: none; }
 *{ box-sizing: border-box; }
 html{ font-size: 62.5%; }
 body{ font: normal normal normal 62.5%/1.5 Georgia, 'Times New Roman', serif; color: rgb(51, 51, 51); }
- ul{ font-size: 1.4rem; margin-top: 0px; margin-right: 0px; margin-bottom: 1.5em; margin-left: 0px; }
+mark{ background-image: none; background-attachment: initial; background-origin: initial; background-clip: initial; background-color: initial; font-style: normal; font-weight: normal; background-position: initial initial; background-repeat: initial initial; }
 .clearfix::after{ content: '.'; display: block; height: 0px; clear: both; visibility: hidden; }
-.no-bullets{ list-style-type: none; list-style-position: initial; list-style-image: initial; }
-.thumb-home-shield{ left: 1px; position: relative; top: 10px; width: 25%; }
+.main-nav{ height: 71px; position: fixed; bottom: 0px; left: 0px; background-image: initial; background-attachment: initial; background-origin: initial; background-clip: initial; background-color: white; width: 100%; overflow-x: scroll; overflow-y: hidden; padding-top: 0px; padding-right: 0px; padding-bottom: 0px; padding-left: 0px; background-position: initial initial; background-repeat: initial initial; }
+.thumb-holder{ background-image: initial; background-attachment: initial; background-origin: initial; background-clip: initial; background-color: blue; white-space: nowrap; width: auto; background-position: initial initial; background-repeat: initial initial; }
+.thumb-item{ background-image: initial; background-attachment: initial; background-origin: initial; background-clip: initial; background-color: rgb(30, 30, 30); color: rgb(255, 255, 255); display: inline-block; height: 58px; line-height: 0; margin-top: 6px; margin-right: 9px; margin-bottom: 0px; margin-left: 0px; text-align: center; width: 103px; background-position: initial initial; background-repeat: initial initial; }
+.current > .thumb{ position: relative; }
+.current > .thumb::after{ width: 100%; height: 4px; -webkit-transition-property: height; -webkit-transition-duration: 0.25s; -webkit-transition-timing-function: linear; -webkit-transition-delay: initial; }
+.thumb{ background-image: initial; background-attachment: initial; background-origin: initial; background-clip: initial; background-color: green; background-position: initial initial; background-repeat: initial initial; }
 @media screen and (min-width: 960px){
-.thumb-home-shield{ left: 0px; top: 18px; }
+.main-nav{ width: 225px; position: fixed; top: 0px; right: 0px; height: 100%; padding-top: 0px; padding-right: 0px; padding-bottom: 0px; padding-left: 0px; overflow-y: scroll; left: auto; bottom: auto; }
+.main-nav .thumb{ background-image: initial; background-attachment: initial; background-origin: initial; background-clip: initial; background-color: rgb(30, 30, 30); color: rgb(255, 255, 255); float: none; font-size: 30px; height: 113px; line-height: 113px; margin-top: 0px; margin-right: 0px; margin-bottom: 13px; margin-left: 10px; text-align: center; width: 197px; background-position: initial initial; background-repeat: initial initial; }
+.main-nav .thumb::after{ display: block; left: -10px; top: 0px; bottom: auto; right: auto; -webkit-transition-property: width; -webkit-transition-duration: 0.25s; -webkit-transition-timing-function: linear; -webkit-transition-delay: initial; }
+.main-nav .current > .thumb::after{ width: 4px; height: 100%; -webkit-transition-property: width; -webkit-transition-duration: 0.25s; -webkit-transition-timing-function: linear; -webkit-transition-delay: initial; }
 }
+.thumb-item svg{ display: none; }
 .wrapper{ height: 99.8%; }
